[package]
name = "tn"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.21", features = ["derive"] }
miette = "7.4.0"
pulldown-cmark = "0.12.2"
serde = { version = "1.0.215", features = ["serde_derive"] }
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
