[package]
name = "tn"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.9"
clap = { version = "4.5.21", features = ["derive"] }
home = "0.5.9"
miette = "7.4.0"
pulldown-cmark = "0.12.2"
serde = { version = "1.0.215", features = ["serde_derive"] }
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs"] }
